--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <section class="page-header">
       <h1 class="project-name">Adam Dicker the Con Artist</h1>
       <h2 class="project-tagline">Is Adam Dicker a criminal? You decide.</h2>
+      <div><input type="text" class="st-default-search-input" placeholder="Search"></div>
     </section>
 
     <section class="main-content">
@@ -31,5 +32,14 @@
         <span class="site-footer-credits">This page uses <a href="https://twitter.com/jasonlong">Jason Long</a>'s <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>.</span>
       </footer>
     </section>
+    
+    <script type="text/javascript">
+      (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
+      (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
+      e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
+      })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+    
+      _st('install','sVFZ4znFYgxszzpaHvNF','2.0.0');
+    </script>
   </body>
 </html>
